Followings are updated; - resolved recursion problem in symbolic diff - resolved compile error on latex
Todos for next commit;
- more symbolic diff/lim
- simplification of formula
- equivalance of formula
- set implementation
- class documentation
- set documentation
- data structure documentation

--- a/documentation/main textbook/ch2.tex
+++ b/documentation/main textbook/ch2.tex
@@ -1,3 +1,4 @@
+% !TEX root = textbook.tex
 \chapter{집합과 함수}
 
 본 단원에서는 집합과 그 표현, 그리고 집합의 구현에 대해서 다룹니다. 
@@ -12,7 +13,7 @@
 
 \lstinputlisting[style=python, 
                 firstnumber = 3, 
-                linerange = {3-5, 77-79}, 
+                linerange = {3-6,77-79}, 
                 caption={Set 구현 (PySet.py)}]{"../../src/pymath/PySet.py"}
 
 
