--- a/documentation/main textbook/program.tex
+++ b/documentation/main textbook/program.tex
@@ -1,3 +1,4 @@
+% !TEX root = textbook.tex
 \chapter{실습환경 설정 및 프로그래밍 복습} 
 
 본 단원에서는 실습환경 설정과 파이썬 문법 소개, 그리고 기초적인 프로그래밍의 개념들을 복습하는 데 도움을 주기 위하여 작성되었습니다. 본 단원은 처음으로 프로그래밍을 배우는 사람을 위한 것이 \textbf{아니라} 복습을 위한 것이므로, 처음 프로그래밍을 배우는 분은 다른 교재를 보기를 권장드립니다. 
@@ -244,22 +245,22 @@ Received by g(f, g = 0, *args, **kwargs)
 
 \lstinputlisting[style=python,  
                 caption={Inspecting Function Calls  (example\_lambda\_sort4.py)}]{"../../src/examples/example_lambda_sort4.py"}
-
-\subsubsection{클래스}
-
-본 단락에서는 파이썬에서 클래스를 어떻게 정의하는지를 살펴보고자 합니다. 
-\lstinputlisting[style=python,  
-                caption={Defining a Class  (example\_class1.py)}]{"../../src/examples/example_class1.py"}
-
-\paragraph{Magic Methods} Magic Method는 
-
-\lstinputlisting[style=python,  
-                caption={Inspecting Function Calls  (example\_class2.py)}]{"../../src/examples/example_class2.py"}
-\paragraph{클래스 상속} 클래스 상속\footnote{\href{https://www.python-course.eu/python3\_inheritance.php}{링크} 참조}
-
-\lstinputlisting[style=python,  
-                caption={Inspecting Function Calls  (example\_class3.py)}]{"../../src/examples/example_class3.py"}
-
+%
+%\subsubsection{클래스}
+%
+%본 단락에서는 파이썬에서 클래스를 어떻게 정의하는지를 살펴보고자 합니다. 
+%\lstinputlisting[style=python,  
+%                caption={Defining a Class  (example\_class1.py)}]{"../../src/examples/example_class1.py"}
+%
+%\paragraph{Magic Methods} Magic Method는 
+%
+%\lstinputlisting[style=python,  
+%                caption={Inspecting Function Calls  (example\_class2.py)}]{"../../src/examples/example_class2.py"}
+%\paragraph{클래스 상속} 클래스 상속\footnote{\href{https://www.python-course.eu/python3\_inheritance.php}{링크} 참조}
+%
+%\lstinputlisting[style=python,  
+%                caption={Inspecting Function Calls  (example\_class3.py)}]{"../../src/examples/example_class3.py"}
+%
 \subsection{파이썬 인터프리터의 이해}
 
 본 단락에서는 주어진 소스 코드를 파이썬이 계산하는 법을 알아볼 것\footnote{\href{https://docs.python.org/3/reference/executionmodel.html}{파이썬 공식 Documentation} 참조}입니다. 본격적인 설명에 앞서, 변수의 종류에 대해서 설명하겠습니다. 일반적으로 변수에는 다음의 세 종류가 있습니다. 
