--- a/documentation/main textbook/textbook.tex
+++ b/documentation/main textbook/textbook.tex
@@ -109,9 +109,10 @@
 
 %\maketitle % Insert title
 
-%\thispagestyle{fancy} % All pages have headers and footers
+
 
 \begin{titlepage}
+\thispagestyle{empty} % All pages have headers and footers
 \maketitle % Insert title
 % \begin{abstract} 
 
@@ -122,18 +123,16 @@
 
 \end{titlepage}
 
-
 %----------------------------------------------------------------------------------------
 %	ARTICLE CONTENTS
 %----------------------------------------------------------------------------------------
 
-\thispagestyle{fancy} % All pages have headers and footers
+
 
 \tableofcontents
 
-\newpage
 
-
+%\thispagestyle{fancy} % All pages have headers and footers
 %----------------------------------------------------------------------------------------
 %	ARTICLE CONTENTS
 %----------------------------------------------------------------------------------------
