lecture note + etc commit for demo

--- a/documentation/main textbook/ch2.tex
+++ b/documentation/main textbook/ch2.tex
@@ -1,34 +1,93 @@
 % !TEX root = textbook.tex
 \chapter{집합과 함수}
 
-본 단원에서는 집합과 그 표현, 그리고 집합의 구현에 대해서 다룹니다. 
+본 단원에서는 집합과 그 표현, 그리고 집합의 구현과 함수에 대해서 다룹니다. 
 
 \section{집합} 
 
 \subsection{집합의 정의}
 
+집합의 정의는 무엇일까요? 국립국어원에 따르면, 집합의 정의는 아래와 같습니다. 
+
 \begin{define}[집합]
-특정 조건에 맞는 원소들의 모임. 임의의 한 원소가 그 모임에 속하는지를 알 수 있고, 그 모임에 속하는 임의의 두 원소가 다른가 같은가를 구별할 수 있는 명확한 표준이 있는 것을 이른다. \footnote{국립국어원의 정의 2번 참조.} \footnote{사실 이 정의만 국립국어원이 정의를 따르는데, 이는 집합 자체가 정의하기 매우 어렵기 때문입니다. 여기서는 간단하게 위 정의를 따르고 넘어갑니다.} 
+특정 조건에 맞는 원소들의 모임. 임의의 한 원소가 그 모임에 속하는지를 알 수 있고, 그 모임에 속하는 임의의 두 원소가 다른가 같은가를 구별할 수 있는 명확한 표준이 있는 것을 이른다. \footnote{국립국어원의 정의 2번 참조.} \footnote{사실 이 정의만 국립국어원의 정의를 따르는데, 이는 집합 자체가 정의하기 매우 어렵기 때문입니다. 여기서는 간단하게 위 정의를 따르고 넘어갑니다.} 
 \end{define}
+
+우리의 목적은 집합을 구현하는 것이므로, 위 정의를 조금 더 생각해 보겠습니다. 먼저, 집합을 정의하기 위해서는 다음의 두 가지 표준이 필요합니다. 
+
+\begin{compactitem} 
+\item 임의의 한 원소가 그 모임에 속하는지를 알 수 있어야 함
+\item 모임에 속하는 임의의 두 원소가 다른가 같은가를 구별할 수 있어야 함
+\end{compactitem}
+
+이를 프로그래밍의 관점에서 생각해 보면, 결국 우리는 다음과 같은 두 개의 함수가 필요하다는 결론을 내릴 수 있습니다. 
+
+\begin{compactitem} 
+\item membership 함수 : 임의의 한 원소가 그 모임에 속하는지를 알 수 있어야 함 -> 어떤 object를 입력받아, True 혹은 False를 리턴하는 함수 \footnote{이러한 함수를 predicate라고도 합니다.} 
+
+이 경우, 어떤 원소에 대해서 membership 함수가 True를 리턴하면 그 원소는 집합의 구성원으로 생각할 수 있습니다. 예를 들어서, 짝수들의 집합이라면 먼저 원소가 정수인지 체크한 다음, 2로 나눈 나머지가 0인지 체크하는 함수를 membership 함수로 생각할 수 있을 것입니다. 이는 파이썬 클래스로 생각하면 isinstance 내장함수와 같은 역할을 합니다. 
+
+\item equivalance 함수 : 모임에 속하는 임의의 두 원소가 다른가 같은가를 구별할 수 있어야 함 -> 어떤 두 object를 입력받아 True 혹은 False를 리턴하는 함수
+
+파이썬의 경우, 클래스의 magic method 중 하나로 \_\_eq\_\_를 제공합니다. 물론 \_\_eq\_\_함수의 기본값은 두 인스턴스가 담겨있는 주소가 같은지를 체크하지만, 필요한 경우 \_\_eq\_\_ 함수를 오버라이드해서 우리가 원하는 형태로 구현하여 사용할 수 있으므로 충분히 집합이라고 할 수 있습니다. 
+\end{compactitem}
+
+따라서, 사실 위 두 함수는 이미 파이썬의 클래스에서 이미 구현되어 있습니다. 즉, 파이썬에서 말하는 클래스는 수학적으로 볼 때, 이미 좋은 집합의 예시라고 할 수 있습니다. 본 강의에서는 편의를 위해서 PySet을 만들어, 집합의 클래스로 생각할 것입니다. 
 
 \lstinputlisting[style=python, 
                 firstnumber = 3, 
-                linerange = {3-6,77-79}, 
+                linerange = {3-8}, 
                 caption={Set 구현 (PySet.py)}]{"../../src/pymath/PySet.py"}
 
+즉, membership 함수와 eq\_func을 가지고 있는 객체를 집합으로 생각할 것입니다. 
 
-\subsection{집합의 표기} 
-% 조건제시법, 원소나열법 
+
+%
+%\subsection{집합의 표기} 
+%% 조건제시법, 원소나열법 
+%
+%집합을 표기하는 방법에는 크게 두 가지 방법이 있습니다. 원소나열법과 조건제시법입니다. 
+%
+%\paragraph{원소나열법} 
+%원소나열법은 유한한 갯수의 원소를 가지고 있는 집합을 표현할 때 주로 사용됩니다. \{ \} 안에 해당 집합의 원소를 모두 나열하면 됩니다. 
+%
+%\paragraph{조건제시법} 
+%조건제시법은 어떤 원소가 그 집합의 원소인지 판별할 수 있는 조건을 중의성이 없는 언어로 표기하는 방식입니다. 
+%
+
 
 \subsection{집합의 연산} 
 % 합집합, 교집합, 여집합, 부분집합, 카테시안 곱 
+
+집합의 연산에는 합집합, 교집합, 여집합과 카테시안 곱이 있습니다. 
 
 \subsection{집합의 종류} 
 % 집합의 크기에 따라 : 유한집합, 가산집합, 비가산집합 
 % 집합의 순서에 따라 : ordered set, partially ordered set 
 
+본 수업에서는 집합을 두 가지 기준에 따라서 나눌 것입니다. 첫 번째 기준은 집합의 원소의 갯수에 따라서 3가지 - 유한집합, 가산집합, 비가산집합 - 으로 나눌 것입니다. 두 번째 기준은 집합의 원소들 간의 순서 여부에 따라서 ordered set, partially ordered set으로 나눕니다. 
+
+
+\subsubsection{집합의 크기에 따른 구분} 
+
+\paragraph{유한집합}
+
+\paragraph{가산집합}
+
+\paragraph{비가산집합} 
+비가산집합은 컴퓨터로는 구현할 수 없기에, 여기서는 구현하지 않습니다\footnote{비가산집합이 구현 불가능한 것에 대한 증명은 튜링 머신의 계산가능성 부분을 참고하면 됩니다. 여기서는 다루지 않습니다.} 
+
+\paragraph{집합의 원소간 순서 여부에 따른 구분}
+
+\paragraph{Totally Ordered Set}
+
+\paragraph{Partially Ordered Set} 
+
+
 \subsection{집합의 예시 : 수 체계}
-% 자연수(짝수 등), 유리수, 실수, 허수
+% 자연수와 그 부분집합(짝수 등), 유리수, 실수, 허수
+
+
 
 \section{좌표계}
 % 직교 좌표계 
