--- a/documentation/main textbook/program.tex
+++ b/documentation/main textbook/program.tex
@@ -245,22 +245,111 @@ Received by g(f, g = 0, *args, **kwargs)
 
 \lstinputlisting[style=python,  
                 caption={Inspecting Function Calls  (example\_lambda\_sort4.py)}]{"../../src/examples/example_lambda_sort4.py"}
-%
-%\subsubsection{클래스}
-%
-%본 단락에서는 파이썬에서 클래스를 어떻게 정의하는지를 살펴보고자 합니다. 
-%\lstinputlisting[style=python,  
-%                caption={Defining a Class  (example\_class1.py)}]{"../../src/examples/example_class1.py"}
-%
-%\paragraph{Magic Methods} Magic Method는 
-%
+
+\subsubsection{클래스}
+
+본 단락에서는 파이썬에서 클래스를 어떻게 정의하는지를 살펴보고자 합니다. 
+
+\paragraph{클래스란} 
+
+클래스는 흔히 과자틀과 그 과자틀로 찍어낸 과자로 비유됩니다.  클래스는 객체를 만들기 위한 코드 템플릿\footnote{https://www.hackerearth.com/practice/python/object-oriented-programming/classes-and-objects-i/tutorial/}을 말합니다. 인스턴스는 이 템플릿을 이용하여 만들어진 코드 덩어리로 생각할 수 있습니다. 예\footnote{본 예시는 \ href{https://wikidocs.net/28}{점프 투 파이썬}에서 참고하였습니다.}를 들어서, 더하기만 가능한 간단한 계산기 코드를 만든다고 가정합시다. 다음과 같이 전역변수를 사용하면 어렵지 않게 구현할 수 있을 것입니다. 
+
+\lstinputlisting[style=python,  
+                caption={더하기만 가능한 계산기  (example\_cal1.py)}]{"../../src/examples/example_cal1.py"}
+
+이 때, 각자 다른 계산기를 2개를 만들어서 사용하고자 하면, 다음과 같이 2개의 계산기를 만들어야 할 것입니다.
+
+\lstinputlisting[style=python,  
+                caption={더하기만 가능한 계산기 2개 (example\_cal2.py)}]{"../../src/examples/example_cal2.py"}
+
+이렇게 코드를 작성할 경우, 완벽하게 똑같은 코드를 두 번 작성해야 함을 알 수 있습니다. 따라서 이러한 중복을 피하기 위해서, 파이썬에서는 - 그리고 객체지향적 언어에서는 - 클래스를 제공합니다. 클래스는 다음과 같이 계산기 코드를 템플릿화하여, 재사용이 용이하게 만듭니다. 
+
+
+\lstinputlisting[style=python,  
+                caption={더하기 계산기 클래스  (example\_cal3.py)}]{"../../src/examples/example_cal3.py"}
+
+이 때, cal1, cal2는 클래스 Calculator의 인스턴스입니다. 
+
+클래스를 사용하는 이유는 개발의 속도와 유지보수의 편의성, 그리고 코드 디자인의 간결성 때문입니다. 잘 구성된 클래스의 경우, 구현하고자 하는 대상과 구현하는 프로그램 소스 코드간 대응이 직관적입니다. 예컨대 회계사용 프로그램을 작성할 경우, 고객/법인/재무재표 등의 클래스를 사용하게 될 것입니다. 이런 경우, 단순 코드 블럭으로 되어있는 것보다 더 직관적으로 프로그램 전체의 구조를 이해할 수 있으며, 이는 개발 속도와 정확도에 긍정적인 영향을 끼칠 것입니다. 프로그램의 유지보수 측면에서도 이와 비슷한 이유로 추후 유지보수가 간결해집니다. 
+
+이제 조금 더 자세하게 클래스(특히, 파이썬에서의 클래스에 대해서) 알아보겠습니다. 
+
+\paragraph{파이썬에서의 클래스} 
+
+위 단락에서 클래스가 무엇인지, 그리고 왜 필요한지에 대해서 간단하게 살펴보았습니다. 본 단락에서는 클래스를 구성하는 요소를 살펴보고, 이를 정의하는 파이썬 문법에 대해서 알아보고자 합니다. 이해를 돕기 위해서 여기서는 문자열을 다루는 간단한 클래스를 만들어보고자 합니다. 먼저, 
+
+클래스는 속성(attribute)와 메소드(method)로 구성됩니다. 속성은 클래스 속성과 인스턴스 속성으로 분류되며, 메소드는 인스턴스 메소드, 클래스 메소드, 스태틱 메소드로 분류됩니다. \footnote{파이썬의 경우, private method를 지원하기는 하나 완벽하게 private하지는 않습니다. \_\_로 시작하는 속성이나 메소드는 private로 분류되지만, 이것이 완벽하게 클래스 밖에서 은닉되어 있지는 않습니다. 예컨대, 클래스 이름이 Mycls이고 속성이 \_\_attr1일 경우, Mycls\_\_attr1 로 접근할 수 있습니다. 더 자세한 내용은 \href{http://www.diveintopython.net/object\_oriented\_framework/private\_functions.html}{참고 링크}를 참고하세요. } 
+
+각각의 예시에 대해서 아래 코드에서 살펴보겠습니다. 먼저, 가장 기본적인 부분만을 작성한 코드를 살펴보겠습니다. 
+
+\lstinputlisting[style=python,  
+		linerange = {1-8},
+                caption={Making a MyString Class  (example\_class1.py)}]{"../../src/examples/example_class1.py"}
+
+위 코드에서 파이썬 클래스의 각 요소들을 설명하면 다음과 같습니다. 
+\begin{compactitem} 
+\item class : 클래스를 정의하는 키워드입니다. 이 키워드 뒤의 단어가 클래스의 이름이 됩니다. 여기서는 MyString입니다. 
+\item maker = 'Schin' : 클래스의 \textbf{속성}을 지정합니다. 여기서는 class\_name, maker, datum의 3개의 속성이 있습니다. 편의상 datum을 우리가 다루고자 하는 문자열로 생각하겠습니다. 
+\item a = MyString : a라는 변수의 값으로 MyString이라는 \textbf{클래스}를 지정합니다. 
+\item b = MyString() : b라는 변수의 값으로 MyString이라는 \textbf{인스턴스}를 지정합니다. 
+\end{compactitem}
+
+여기서 클래스(a)와 인스턴스(b)의 차이를 살펴보기 위해서 다음 코드를 실행해 보겠습니다. 
+
+\lstinputlisting[style=python,  
+		linerange = {10-17},
+                caption={Making a MyString Class  (example\_class1.py)}]{"../../src/examples/example_class1.py"}
+
+여기서 볼 수 있듯이, 클래스 자체의 변화는 인스턴스에 영향을 주지만 그 역은 성립하지 않습니다. 이는 모든 인스턴스는 클래스의 틀을 따르기 때문입니다. 위에서의 쿠키틀의 예시를 들면, 쿠키 하나를 바꾼다고 쿠키틀이 바뀌지는 않는 것과 같습니다. 반대로, 쿠키틀을 바꾸면 모든 쿠키는 영향을 받게 됩니다. 
+
+
+본격적으로 문자열을 다루기 위해서 b에 우리가 다루고자 하는 문자열을 저장하고자 합니다. 이는 다음과 같은 방식으로 할 수 있습니다. 
+
+\lstinputlisting[style=python,  
+		linerange = {19-20},
+                caption={MyClass Attribute   (example\_class1.py)}]{"../../src/examples/example_class1.py"}
+
+이제 이 후에는 어떻게 해야 할까요? 문자열을 저장하는 것만으로는 충분하지 않습니다. 이제 조금 더 복잡한 클래스 문법을 살펴보겠습니다. 
+
+\lstinputlisting[style=python,  
+		linerange = {1-33},
+                caption={Making a MyString Class  (example\_class2.py)}]{"../../src/examples/example_class2.py"}
+
+\begin{compactitem}
+\item 속성(Attribute) : 클래스나 인스턴스가 가지고 있는 정보를 말합니다. 예를 들어서, 문자열의 경우라면 문자열의 내용이나 저자 등이 있을 것입니다. 
+\begin{compactitem} 
+\item 클래스 속성  : 클래스 자체가 가지고 있는 속성을 말합니다. 예를 들어서, 문자열의 경우라면 클래스 이름 MyString 등이 있습니다. 
+\item 인스턴스 속성 : 인스턴스 각각이 가지고 있는 속성을 말합니다. 예를 들어서, 문자열의 경우라면 문자열의 내용 등이 있습니다. 
+\end{compactitem}
+\item 메소드(method) : 클래스나 인스턴스의 상태를 변화시키거나, 새로운 클래스를 만드는 등의 작업을 하는 함수입니다. 
+\begin{compactitem} 
+\item 인스턴스 메소드 : 인스턴스에 대해서 작동하는 함수입니다. 인스턴스를 변형시키거나 인스턴스를 이용하여 어떠한 작업을 수행합니다. 
+\item 클래스 메소드 : 클래스에 대해서 작동하는 함수입니다. 클래스 자체를 변형시킬 수 있습니다. 
+\item 스태틱 메소드 : 클래스나 인스턴스와 상관없는 함수입니다. 보통 클래스 내에서만 쓰이지만, 딱히 인스턴스나 클래스의 정보를 필요로 하지 않는 경우에 쓰입니다. 
+
+\end{compactitem}
+\end{compactitem}
+
+
+
+위 소스 코드를 통해서 우리는 다음과 같은 일들을 할 수 있습니다. 
+
+\lstinputlisting[style=python,  
+		linerange = {42-55},
+                caption={MyClass Attribute   (example\_class2.py)}]{"../../src/examples/example_class2.py"}
+
+
+
+%\paragraph{Magic Methods} Magic Method는 대표적인 syntactic sugar로써, 일반적으로 \_\_\textit{method\_name}\_\_형태로 메소드를 지칭합니다.
+
 %\lstinputlisting[style=python,  
 %                caption={Inspecting Function Calls  (example\_class2.py)}]{"../../src/examples/example_class2.py"}
+
 %\paragraph{클래스 상속} 클래스 상속\footnote{\href{https://www.python-course.eu/python3\_inheritance.php}{링크} 참조}
 %
 %\lstinputlisting[style=python,  
 %                caption={Inspecting Function Calls  (example\_class3.py)}]{"../../src/examples/example_class3.py"}
-%
+
 \subsection{파이썬 인터프리터의 이해}
 
 본 단락에서는 주어진 소스 코드를 파이썬이 계산하는 법을 알아볼 것\footnote{\href{https://docs.python.org/3/reference/executionmodel.html}{파이썬 공식 Documentation} 참조}입니다. 본격적인 설명에 앞서, 변수의 종류에 대해서 설명하겠습니다. 일반적으로 변수에는 다음의 세 종류가 있습니다. 
