commit for lecture 2

--- a/documentation/lecture notes/lecture 1.5/latex example/paper/naaclhlt2016-latex/Basbalo.tex
+++ b/documentation/lecture notes/lecture 1.5/latex example/paper/naaclhlt2016-latex/Basbalo.tex
@@ -61,6 +61,9 @@
 
 \begin{abstract}
 Recently, robot journalism have been a big issue in natural language processing. However, most of the robot journalism frameworks appliced the static template method, which lacks variety of the text. In order to enhance diversity of generated text, this paper applies various natural language generation methods. As a result, this paper proposes framework for generating article that explains a baseball game. Overall process of framework suggested in this paper is as following. First, analyze game record to extract events in the match, and apply support vector machine to select events that should be included in the article. Second, generate paragraph structures based on the static template. Third, generate sentence using combinatory categorical grammar(CCG) based on modal logic. The resulting articles are evaluated by professioanl baseball journalists. 
+
+$\int exp(-\alpha x^2)$
+
 \end{abstract}
 
 \section{Introduction}
@@ -82,6 +85,7 @@ Remaining parts are organized as following. Section 2 covers summary of related 
 %Robot journalism refers to the study of algorithm-based journalism practices where computer algorithms generate news articles without intervention from human writers. This paper presents ‘Robot Journalism Framework’, which depicts a step-by-step description of how algorithms are used at every stage, from data gathering to news writing. The framework consists of five steps: data crawling, event extraction, key event detection, mood detection, and news article generation. Data crawling step involves gathering of raw data using crawling software, and the collected data is interpreted into a series of comparable information at the event extraction step by applying preset rules. Relatively more important events are statistically calculated among all the information piled at the database in the third step, key event detection. Then the narrative structure is determined by analyzing the frequency and weight of key events in mood detection step, and the last step of the framework is to generate news articles in natural Korean language. In this paper, robot journalism framework is applied in generating baseball stories from raw broadcasting data. We conducted a user study with readers of our robot news Facebook page to examine their perception of algorithm-generated news in terms of informativeness, objectivity, and credibility.
 
 \section{Methodology} 
+
 
 \subsection{Background} 
 
