--- a/documentation/lecture notes/lecture 1.5/lecture1.5.tex
+++ b/documentation/lecture notes/lecture 1.5/lecture1.5.tex
@@ -124,6 +124,8 @@
 \subsection{git 소개} 
 
 \begin{frame}{Git 설치}
+
+$\sum^{n}_{i=1}$
 \begin{itemize} 
 \item Windows : git-scm 설치 (http://git-scm.com/download/win)
 \item Linux(Ubuntu) : sudo apt-get install git
