--- a/documentation/main textbook/ch3.tex
+++ b/documentation/main textbook/ch3.tex
@@ -1,12 +1,31 @@
+% !TEX root = textbook.tex
+
 \chapter{식과 방정식}
+
+본 단원에서는 수식을 계산하는 법을 간단하게 복습하고 넘어가고, 이를 파싱하는 클래스 PyFormula를 구현하여 문자열 형태의 수식을 트리 형태로 만들어 앞으로의 진행 과정에 계속 사용할 것이다. 
+
+\section{파싱} 
+
+\subsection{What is Parsing?}
+
+\subsection{Grammar} 
+
+\subsection{Abstract Syntax Tree}
+
+
+\subsection{Tokenizer/Parser} 
+
+\paragraph{Tokenizer Implementation} 
+\paragraph{Parser Implementation} 
+
+\paragraph{Extending Parser} 
 
 \section{식의 계산} 
 
+
+
+
 \subsection{미지수와 식} 
-
-\subsection{곱셈공식과 인수분해} 
-
-\subsection{방정식의 풀이}
 
 
 
