--- a/documentation/lecture notes/lecture 3/lecture3.tex
+++ b/documentation/lecture notes/lecture 3/lecture3.tex
@@ -169,7 +169,7 @@
 
 \begin{frame}{행렬의 연산 : 곱셈} 
 \begin{itemize} 
-\item 행렬-행렬 곱셉 : $C = A\times B$ 라 하자. 이 때, A가 $m \times n$ 행렬이고 B가 $p \times k$ 행렬일 때, $n=p$ 여야 곱셉이 가능하며, 결과는 $m \times k$ 행렬이 된다. $C_{ij} = \sum^m A_{ik} B_{kj}$ 로 정의된다. 행렬의 곱셈은 일반적으로 교환법칙이 성립하지 않으나, 1) 결합법칙은 성립한다. 
+\item 행렬-행렬 곱셈 : $C = A\times B$ 라 하자. 이 때, A가 $m \times n$ 행렬이고 B가 $p \times k$ 행렬일 때, $n=p$ 여야 곱셈이 가능하며, 결과는 $m \times k$ 행렬이 된다. $C_{ij} = \sum^m A_{ik} B_{kj}$ 로 정의된다. 행렬의 곱셈은 일반적으로 교환법칙이 성립하지 않으나, 1) 결합법칙은 성립한다. 
 \item 행렬-벡터 곱셈 : 행렬-행렬 곱셈의 특이한 케이스이다. 
 \end{itemize}
 
@@ -975,7 +975,7 @@ $A\vec{x} = \vec{b}$
 
 \begin{frame}{Generalized Arithematic Operations} 
 
-이때까지 벡터, 행렬 등의 \textit{선형대수학적} 객제들의 더하기와 상수배의 operation에 대해서 다루었다. 이제 이 연산을 확장해 보자. 즉, 이제부터는 더하기, 곱하기 등은 굳이 사칙연산일 필요가 없다. 예컨대, 함수끼리의 곱셈을 다음과 같이 정의할 수도 있다. 
+이때까지 벡터, 행렬 등의 \textit{선형대수학적} 객체들의 더하기와 상수배의 operation에 대해서 다루었다. 이제 이 연산을 확장해 보자. 즉, 이제부터는 더하기, 곱하기 등은 굳이 사칙연산일 필요가 없다. 예컨대, 함수끼리의 곱셈을 다음과 같이 정의할 수도 있다. 
 
 $\int f \bullet g dx $ 
 
