--- a/documentation/main textbook/ch4.tex
+++ b/documentation/main textbook/ch4.tex
@@ -1,2 +1,74 @@
-\chapter{함수의 정의와 다양한 함수의 성질}
+% !TEX root = textbook.tex
 
+\chapter{벡터와 행렬}
+
+\section{벡터와 행렬의 정의와 연산} 
+
+\subsection{벡터의 정의와 연산} 
+
+\paragraph{벡터의 정의}
+
+\paragraph{사칙연산} 
+
+\paragraph{선형결합}
+
+
+\subsection{행렬의 정의와 연산}
+
+\paragraph{행렬의 정의} 
+
+\paragraph{행렬간 사칙연산} 
+
+\paragraph{행렬-벡터간 사칙연산}
+
+\paragraph{Transpose와 Trace}
+
+\paragraph{행렬식}
+
+\subsubsection{행렬의 Elementary Row Operation}
+
+\section{벡터와 행렬의 계산}
+
+
+\subsection{벡터공간의 정의} 
+
+\subsubsection{선형결합과 선형독립} 
+
+\subsubsection{Span과 기저} 
+\paragraph{공간의 차
+
+\subsection{행렬의 Row Space} 
+
+\subsubsection{행렬의 Row Space}
+\subsubsection{행렬의 Rank와 Nullity}
+
+
+\subsubsection{가우스 소거법}
+\subsubsection{Row Echelon Form}
+\subsubsection{가우스 소거법과 Row Space} 
+
+\subsection{고유값과 고유벡터} 
+
+\subsection{역행렬} 
+
+\subsection{다양한 행렬의 분해} 
+
+\subsubsection{LU Decomposition} 
+\subsubsection{QR Decomposition} 
+\subsubsection{Singlular Value Decomposition}
+\section{행렬과 함수}
+
+
+\section{벡터와 행렬의 응용} 
+\subsection{연립방정식의 해법}
+\subsection{Linear Least Square 문제의 해법}
+\subsection{기하학적 응용}
+\subsection{Support Vector Machine}
+
+\section{일반화된 벡터와 벡터공간}
+
+\subsection{Field의 정의} 
+
+\subsection{벡터와 벡터공간의 정의} 
+
+\subsection{다양한 벡터의 예제}
