--- a/documentation/reading materials/Introduction to Linear Differential Equations/Introduction to the Solution of Linear Differential Equations.tex
+++ b/documentation/reading materials/Introduction to Linear Differential Equations/Introduction to the Solution of Linear Differential Equations.tex
@@ -102,11 +102,29 @@
 
 \subsection{개요} 
 
+본 수업에서 언급했듯이, 미분 연산자는 선형변환이다. 즉, 
+
+\begin{equation} 
+\frac{d}{dx} (a f(x) + bg(x)) = a \frac{df}{dx} +  b \frac{dg}{dx}
+\end{equation} 
+
+이 성립한다. 한번 미분이 선형변환이므로, 여러 번 미분한 것이나 여러 번의 미분연산의 선형결합 또한 다 선형변환이 된다. 즉, 
+
+\begin{eqnarray} 
+D &=& \sum_{i=0}^n a_i \frac{d^n}{d^nx}  \\
+L &=& \sum_{i=0}^n p_i(x) \frac{d^n}{d^nx} 
+\end{eqnarray} 
+는 선형변환이다. 이 때, L을 p차 미분연산자라고 한다. 여기서 $p_i(x)$는 임의의 x에 대한 함수이다. 이 때, 아래와 같은 꼴의 식을 선형 미분방정식이라고 한다. 
+
+\begin{equation} 
+Lf(x) = F(x)
+\end{equation}
+
+이 때, L이 1차 미분연산자이면 1차 미분방정식이라고 한다. 
+
+\subsection{1차 상미분방정식} 
 
 
-\subsection{1계 상미분방정식} 
-
-\subsection{상수 계수를 가지는 1계 미분방정식}
 
 \subsection{2계 상미분방정식} 
 
